--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,11 +26,12 @@
     "prefer-arrow-callback": "off",
     "no-var": "error",
     "no-dupe-keys": "error",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off"
   },
   "settings": {
     "react": {
-      "version": "18.3.1"  // 이 줄을 추가합니다.
+      "version": "18.3.1" // 이 줄을 추가합니다.
     }
   }
 }
