--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,12 +22,12 @@
   },
   "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier", "import"],
   "rules": {
-    // "arrow-body-style": "error",
     "prefer-arrow-callback": "off",
     "no-var": "error",
     "no-dupe-keys": "error",
     "react/prop-types": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/display-name": "off"
   },
   "settings": {
     "react": {
