--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.3",
     "echarts": "^5.5.1",
+    "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
