--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.3",
+    "crypto-js": "^4.2.0",
     "echarts": "^5.5.1",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
